--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Ygor Alcântara",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "@types/hapi__joi": "^16.0.12",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.10"
