--- a/package.json
+++ b/package.json
@@ -5,33 +5,35 @@
   "main": "./src/app.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "env $(cat .env) nodemon --watch 'src/**/*.ts' --exec 'ts-node' ./src/app.ts",
+    "dev": "env $(cat .env) nodemon --watch 'src/**/*.ts' --exec 'node -r tsconfig-paths/register -r ts-node/register' ./src/app.ts",
     "start": "env $(cat .env) nodemon --watch 'dist/**/*.js' ./dist/app.js",
-    "prod": "npm run build && npm run start"
+    "prod": "npm run build && npm run start",
+    "teste": "env $(cat .env) ts-node ./src/app.ts"
   },
   "author": "Ygor Alcântara",
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "@types/hapi__joi": "^16.0.12",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.10"
+    "mongoose": "^5.9.14"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.6",
-    "@types/mongoose": "^5.7.12",
-    "@typescript-eslint/eslint-plugin": "^2.29.0",
-    "@typescript-eslint/parser": "^2.29.0",
+    "@types/hapi__joi": "^17.1.0",
+    "@types/mongoose": "^5.7.20",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
-    "nodemon": "^2.0.3",
+    "nodemon": "^2.0.4",
     "prettier": "^2.0.4",
-    "ts-node": "^8.9.0",
-    "typescript": "^3.8.3"
+    "ts-node": "^8.10.1",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.9.2"
   }
 }
