--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,15 @@
     "target": "ES2020",
     "module": "commonjs",
     "sourceMap": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "baseUrl": "src",
+    "paths": {
+      "*": ["./*"],
+      "@middleware": ["middlewares"],
+      "@config": ["config"],
+      "@utils": ["utils"],
+      "@modules/*": ["modules/*"]
+    }
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", ".vscode"]
